--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
                     return 'delete';
                 case 'Enter':
                     return 'equals';
+                case '.':
+                    return 'decimal';
                 default:
                     return false;
             }
